[gd_scene load_steps=27 format=3 uid="uid://b8tutg4n765i6"]

[ext_resource type="Script" path="res://resources/fonts/scripts/Game.gd" id="1_1ypop"]
[ext_resource type="Shader" path="res://resources/shaders/DiscreteSunset.gdshader" id="2_ij3oe"]
[ext_resource type="Texture2D" uid="uid://bfy5ewt8i4hu1" path="res://resources/sprites/white.png" id="3_0hgii"]
[ext_resource type="Texture2D" uid="uid://b3y0heffkokaf" path="res://resources/sprites/whitesquare.png" id="4_16ib2"]
[ext_resource type="Shader" path="res://resources/shaders/Sun.gdshader" id="4_lc0vs"]
[ext_resource type="Shader" path="res://resources/shaders/Wiggle.gdshader" id="6_6175e"]
[ext_resource type="Script" path="res://resources/fonts/scripts/FollowElement.gd" id="6_cdqic"]
[ext_resource type="Texture2D" uid="uid://b8ho2wukpvnn4" path="res://resources/sprites/blue_noise.png" id="7_opimw"]
[ext_resource type="Theme" uid="uid://cle8ocb3gsi5d" path="res://resources/themes/game.tres" id="8_oqwei"]
[ext_resource type="Script" path="res://resources/fonts/scripts/Screens.gd" id="9_mhngn"]
[ext_resource type="Script" path="res://resources/fonts/scripts/night/NightStart.gd" id="11_5b88c"]
[ext_resource type="Material" uid="uid://bdkajv7h71teu" path="res://resources/shaders/materials/ColorSchemer.tres" id="13_neljh"]
[ext_resource type="Script" path="res://resources/fonts/scripts/TranslatableRichTextLabel.gd" id="13_x70ce"]
[ext_resource type="Script" path="res://resources/fonts/scripts/TranslatableButton.gd" id="14_u0scy"]
[ext_resource type="Script" path="res://resources/fonts/scripts/night/NightPresent.gd" id="15_outhn"]
[ext_resource type="Shader" path="res://resources/shaders/CircleCut.gdshader" id="16_n151q"]
[ext_resource type="Texture2D" uid="uid://g0l5e1r7277v" path="res://resources/sprites/players/andre.png" id="17_tbj37"]
[ext_resource type="Script" path="res://resources/fonts/scripts/night/NightTraits.gd" id="18_wqsrg"]
[ext_resource type="Script" path="res://resources/fonts/scripts/night/TraitsContainer.gd" id="19_vue33"]
[ext_resource type="Script" path="res://resources/fonts/scripts/night/NightAction.gd" id="20_yjbma"]
[ext_resource type="Shader" path="res://resources/shaders/ColorSchemer.gdshader" id="21_ba0ro"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3vbwi"]
shader = ExtResource("2_ij3oe")
shader_parameter/bottom_color = Color(0.541176, 0.0784314, 0.443137, 1)
shader_parameter/top_color = Color(0.0862745, 0.105882, 0.341176, 1)
shader_parameter/ray_distance = 0.02
shader_parameter/ray_width = 0.02
shader_parameter/ray_length = 0.3
shader_parameter/ray_spacing = 0.5
shader_parameter/time_scale = 0.1
shader_parameter/level_time_diff = 0.05
shader_parameter/total_phases = 6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h72ot"]
shader = ExtResource("4_lc0vs")
shader_parameter/color = Color(0.803922, 0.243137, 0.266667, 1)
shader_parameter/radius = 0.4
shader_parameter/ray_distance = 0.05
shader_parameter/ray_width = 0.05
shader_parameter/total_rays = 4
shader_parameter/time_scale = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_suwo8"]
shader = ExtResource("6_6175e")
shader_parameter/strength = 3.0
shader_parameter/uv_scaling = 0.5
shader_parameter/movement_direction = Vector2(1, 0)
shader_parameter/movement_speed = 0.02
shader_parameter/NOISE_TEXTURE = ExtResource("7_opimw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i7lyr"]
shader = ExtResource("16_n151q")
shader_parameter/radius = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bdlhc"]
shader = ExtResource("21_ba0ro")

[node name="Game" type="Node2D"]
script = ExtResource("1_1ypop")

[node name="BG" type="Node2D" parent="."]

[node name="Sky" type="Sprite2D" parent="BG"]
material = SubResource("ShaderMaterial_3vbwi")
position = Vector2(540, 960)
rotation = 3.14159
texture = ExtResource("3_0hgii")

[node name="Sun" type="Sprite2D" parent="BG"]
material = SubResource("ShaderMaterial_h72ot")
position = Vector2(540, 128)
rotation = 3.14159
texture = ExtResource("4_16ib2")
script = ExtResource("6_cdqic")

[node name="Mountains" type="Polygon2D" parent="BG"]
position = Vector2(-12, 0)
color = Color(0.0784314, 0.0352941, 0.0941176, 1)
polygon = PackedVector2Array(67, 1234, 177, 1562, 245, 1501, 431, 1747, 541, 1665, 659, 1715, 751, 1597, 833, 1701, 880, 1597, 915, 1644, 1051, 1284, 1109, 1466, 1101, 1967, -19, 1953, -1.69739, 1479.76)

[node name="Noise" type="ColorRect" parent="BG"]
material = SubResource("ShaderMaterial_suwo8")
offset_right = 1080.0
offset_bottom = 1920.0

[node name="Screens" type="Node2D" parent="."]
script = ExtResource("9_mhngn")

[node name="Night" type="Control" parent="Screens"]
custom_minimum_size = Vector2(5, 0.045)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1080.0
offset_bottom = 1920.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("8_oqwei")

[node name="Start" type="Control" parent="Screens/Night"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("11_5b88c")

[node name="Explanation" type="RichTextLabel" parent="Screens/Night/Start"]
material = ExtResource("13_neljh")
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.270833
anchor_right = 1.0
anchor_bottom = 0.270833
offset_left = 25.0
offset_top = -364.5
offset_right = -25.0
offset_bottom = 364.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]A noite começou! Todos os jogadores fecham os olhos e vão dormir.

O aparelho deve ser passado de jogador em jogador em sentido horário para que cada um realize suas ações noturnas."
fit_content = true
script = ExtResource("13_x70ce")
text_code = "night_start"
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="Screens/Night/Start"]
material = ExtResource("13_neljh")
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -465.0
offset_right = -150.0
offset_bottom = -315.0
grow_horizontal = 2
grow_vertical = 0
text = "COMEÇAR"
script = ExtResource("14_u0scy")
text_code = "night_start_accept"

[node name="Present" type="Control" parent="Screens/Night"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("15_outhn")

[node name="PlayerIcon" type="TextureRect" parent="Screens/Night/Present"]
material = SubResource("ShaderMaterial_i7lyr")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 202.0
offset_right = 150.0
offset_bottom = 502.0
grow_horizontal = 2
texture = ExtResource("17_tbj37")

[node name="PlayerName" type="RichTextLabel" parent="Screens/Night/Present"]
material = ExtResource("13_neljh")
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -410.0
offset_bottom = -342.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]André"
fit_content = true

[node name="Next" type="Button" parent="Screens/Night/Present"]
material = ExtResource("13_neljh")
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = -465.0
offset_right = -150.0
offset_bottom = -315.0
grow_horizontal = 2
grow_vertical = 0
text = "JOGAR"
script = ExtResource("14_u0scy")
text_code = "present_accept"

[node name="Timer" type="Timer" parent="Screens/Night/Present"]

[node name="Traits" type="Control" parent="Screens/Night"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("18_wqsrg")

[node name="PlayerName" type="RichTextLabel" parent="Screens/Night/Traits"]
material = ExtResource("13_neljh")
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -876.0
offset_bottom = -788.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]André"
fit_content = true

[node name="TraitsScroll" type="ScrollContainer" parent="Screens/Night/Traits"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -642.0
offset_right = -50.0
offset_bottom = 525.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_oqwei")

[node name="TraitsContainer" type="VBoxContainer" parent="Screens/Night/Traits/TraitsScroll"]
custom_minimum_size = Vector2(980, 0)
layout_mode = 2
alignment = 1
script = ExtResource("19_vue33")

[node name="Action" type="Control" parent="Screens/Night"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("8_oqwei")
script = ExtResource("20_yjbma")

[node name="Back" type="Button" parent="Screens/Night/Action"]
material = SubResource("ShaderMaterial_bdlhc")
layout_mode = 2
offset_left = 50.0
offset_top = 102.0
offset_right = 330.0
offset_bottom = 225.0
text = "Back"

[node name="Scroll" type="ScrollContainer" parent="Screens/Night/Action"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -642.0
offset_right = -50.0
offset_bottom = 905.0
grow_horizontal = 2
grow_vertical = 2

[node name="Components" type="VBoxContainer" parent="Screens/Night/Action/Scroll"]
custom_minimum_size = Vector2(980, 0)
layout_mode = 2
alignment = 1

[node name="DayAnnouncements" type="Control" parent="Screens"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("8_oqwei")

[node name="Discussion" type="Control" parent="Screens"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("8_oqwei")

[node name="Voting" type="Control" parent="Screens"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("8_oqwei")

[connection signal="pressed" from="Screens/Night/Action/Back" to="Screens/Night/Action" method="go_back"]
